# minification-station

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
minification_station/: main.py
minification_station/config/: args.py  constants.py  enviornment_setup.py
minification_station/logging/: decorators.py
minification_station/processing/: file_processor.py
minification_station/traversal/: directory_traversal.py
